--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -74,46 +74,84 @@ jobs:
           }
         } else {
           Write-Host "Test suite found: $PWD\$testSuitePath.ts"
+          
+          # Kiểm tra test suite có test cases không
+          $tsContent = Get-Content "$PWD\$testSuitePath.ts" -Raw
+          $testCaseCount = ([regex]::Matches($tsContent, '<testCaseId>')).Count
+          Write-Host "Found $testCaseCount test case(s) in test suite"
+          
+          if ($testCaseCount -eq 0) {
+            Write-Host "WARNING: Test suite has no test cases!"
+            Write-Host "This may be why tests are not running."
+          }
         }
         
         Write-Host "Starting Katalon execution..."
         Write-Host "Command: $KATALON_HOME\katalon.exe -runMode=console -projectPath=`"$PWD`" -testSuitePath=`"$testSuitePath`" -executionProfile=`"default`" -browserType=`"Chrome (headless)`" -reportFolder=`"$PWD\Reports`""
         $startTime = Get-Date
         
-        # Chạy Katalon với output chi tiết và capture output
-        $output = & "$KATALON_HOME\katalon.exe" -runMode=console `
-          -projectPath="$PWD" `
-          -retry=0 `
-          -testSuitePath="$testSuitePath" `
-          -executionProfile="default" `
-          -browserType="Chrome (headless)" `
-          -apiKey="" `
-          -g_username="" `
-          -g_password="" `
-          -reportFolder="$PWD\Reports" `
-          2>&1
+        # Chạy Katalon và đợi process hoàn thành
+        Write-Host "Executing Katalon with arguments..."
+        $arguments = @(
+          "-runMode=console",
+          "-projectPath=$PWD",
+          "-retry=0",
+          "-testSuitePath=$testSuitePath",
+          "-executionProfile=default",
+          "-browserType=Chrome (headless)",
+          "-apiKey=",
+          "-g_username=",
+          "-g_password=",
+          "-reportFolder=$PWD\Reports"
+        )
         
-        # Hiển thị output
-        $output | ForEach-Object {
-          Write-Host $_
+        Write-Host "Arguments: $($arguments -join ' ')"
+        
+        # Chạy và đợi với timeout
+        $process = Start-Process -FilePath "$KATALON_HOME\katalon.exe" `
+          -ArgumentList $arguments `
+          -NoNewWindow -Wait -PassThru `
+          -RedirectStandardOutput "katalon-output.txt" `
+          -RedirectStandardError "katalon-error.txt"
+        
+        Write-Host "Process completed. Exit code: $($process.ExitCode)"
+        
+        # Đọc output
+        if (Test-Path "katalon-output.txt") {
+          Write-Host "=== Katalon Output ==="
+          Get-Content "katalon-output.txt" | ForEach-Object { Write-Host $_ }
         }
         
+        if (Test-Path "katalon-error.txt") {
+          Write-Host "=== Katalon Errors ==="
+          Get-Content "katalon-error.txt" | ForEach-Object { Write-Host $_ }
+        }
+        
+        $exitCode = $process.ExitCode
         $endTime = Get-Date
         $duration = $endTime - $startTime
+        
         Write-Host "=========================================="
         Write-Host "Katalon execution completed in $($duration.TotalSeconds) seconds"
-        Write-Host "Exit code: $LASTEXITCODE"
+        Write-Host "Exit code: $exitCode"
         Write-Host "=========================================="
+        
+        # Set LASTEXITCODE để dùng sau
+        $global:LASTEXITCODE = $exitCode
         
         # Kiểm tra nếu chạy quá nhanh (có thể test không chạy)
         if ($duration.TotalSeconds -lt 10) {
           Write-Host "WARNING: Test completed too quickly ($($duration.TotalSeconds) seconds)."
           Write-Host "This may indicate that tests did not actually run."
-          Write-Host "Check the output above for any errors."
+          Write-Host "Possible reasons:"
+          Write-Host "  1. Test suite path is incorrect"
+          Write-Host "  2. Test suite has no test cases"
+          Write-Host "  3. Katalon failed to start properly"
+          Write-Host "Check the output and error files above for details."
         }
           
-        if ($LASTEXITCODE -ne 0) {
-          Write-Host "Tests failed with exit code $LASTEXITCODE"
+        if ($exitCode -ne 0) {
+          Write-Host "Tests failed with exit code $exitCode"
           # Không exit ngay, để tìm reports trước
         }
         
@@ -180,14 +218,14 @@ jobs:
           }
           
           # Tạo file report HTML (dùng cách đơn giản để tránh lỗi YAML)
-          $status = if ($LASTEXITCODE -eq 0) { "PASSED" } else { "FAILED" }
-          $statusClass = if ($LASTEXITCODE -eq 0) { "success" } else { "failure" }
+          $status = if ($exitCode -eq 0) { "PASSED" } else { "FAILED" }
+          $statusClass = if ($exitCode -eq 0) { "success" } else { "failure" }
           $durationStr = [math]::Round($duration.TotalSeconds, 2).ToString()
           $timestamp = Get-Date -Format "yyyy-MM-dd HH:mm:ss"
           $startTimeStr = $startTime.ToString("yyyy-MM-dd HH:mm:ss")
           $endTimeStr = $endTime.ToString("yyyy-MM-dd HH:mm:ss")
           
-          $htmlContent = '<!DOCTYPE html><html><head><title>Katalon Test Report</title><style>body{font-family:Arial,sans-serif;margin:20px;background:#f5f5f5}.container{max-width:1200px;margin:0 auto;background:white;padding:20px;border-radius:8px;box-shadow:0 2px 4px rgba(0,0,0,0.1)}h1{color:#333;border-bottom:3px solid #4CAF50;padding-bottom:10px}.summary{display:flex;gap:20px;margin:20px 0}.card{flex:1;padding:15px;border-radius:5px}.success{background:#d4edda;border-left:4px solid #28a745}.failure{background:#f8d7da;border-left:4px solid #dc3545}.info{background:#d1ecf1;border-left:4px solid #17a2b8}.label{font-weight:bold;color:#666}.value{font-size:24px;margin-top:5px}.details{margin-top:20px}table{width:100%;border-collapse:collapse;margin-top:10px}th,td{padding:12px;text-align:left;border-bottom:1px solid #ddd}th{background:#f8f9fa;font-weight:bold}.timestamp{color:#666;font-size:14px}</style></head><body><div class="container"><h1>Katalon Test Execution Report</h1><div class="timestamp">Generated: ' + $timestamp + '</div><div class="summary"><div class="card ' + $statusClass + '"><div class="label">Status</div><div class="value">' + $status + '</div></div><div class="card info"><div class="label">Duration</div><div class="value">' + $durationStr + 's</div></div><div class="card info"><div class="label">Exit Code</div><div class="value">' + $LASTEXITCODE + '</div></div></div><div class="details"><h2>Execution Details</h2><table><tr><th>Property</th><th>Value</th></tr><tr><td>Test Suite</td><td>' + $testSuitePath + '</td></tr><tr><td>Project Path</td><td>' + $PWD + '</td></tr><tr><td>Katalon Version</td><td>10.4.2</td></tr><tr><td>Browser</td><td>Chrome (headless)</td></tr><tr><td>Execution Profile</td><td>default</td></tr><tr><td>Start Time</td><td>' + $startTimeStr + '</td></tr><tr><td>End Time</td><td>' + $endTimeStr + '</td></tr></table></div><div class="details"><h2>Notes</h2><p>This report was automatically generated by GitHub Actions workflow.</p></div></div></body></html>'
+          $htmlContent = '<!DOCTYPE html><html><head><title>Katalon Test Report</title><style>body{font-family:Arial,sans-serif;margin:20px;background:#f5f5f5}.container{max-width:1200px;margin:0 auto;background:white;padding:20px;border-radius:8px;box-shadow:0 2px 4px rgba(0,0,0,0.1)}h1{color:#333;border-bottom:3px solid #4CAF50;padding-bottom:10px}.summary{display:flex;gap:20px;margin:20px 0}.card{flex:1;padding:15px;border-radius:5px}.success{background:#d4edda;border-left:4px solid #28a745}.failure{background:#f8d7da;border-left:4px solid #dc3545}.info{background:#d1ecf1;border-left:4px solid #17a2b8}.label{font-weight:bold;color:#666}.value{font-size:24px;margin-top:5px}.details{margin-top:20px}table{width:100%;border-collapse:collapse;margin-top:10px}th,td{padding:12px;text-align:left;border-bottom:1px solid #ddd}th{background:#f8f9fa;font-weight:bold}.timestamp{color:#666;font-size:14px}</style></head><body><div class="container"><h1>Katalon Test Execution Report</h1><div class="timestamp">Generated: ' + $timestamp + '</div><div class="summary"><div class="card ' + $statusClass + '"><div class="label">Status</div><div class="value">' + $status + '</div></div><div class="card info"><div class="label">Duration</div><div class="value">' + $durationStr + 's</div></div><div class="card info"><div class="label">Exit Code</div><div class="value">' + $exitCode + '</div></div></div><div class="details"><h2>Execution Details</h2><table><tr><th>Property</th><th>Value</th></tr><tr><td>Test Suite</td><td>' + $testSuitePath + '</td></tr><tr><td>Project Path</td><td>' + $PWD + '</td></tr><tr><td>Katalon Version</td><td>10.4.2</td></tr><tr><td>Browser</td><td>Chrome (headless)</td></tr><tr><td>Execution Profile</td><td>default</td></tr><tr><td>Start Time</td><td>' + $startTimeStr + '</td></tr><tr><td>End Time</td><td>' + $endTimeStr + '</td></tr></table></div><div class="details"><h2>Notes</h2><p>This report was automatically generated by GitHub Actions workflow.</p></div></div></body></html>'
           
           $htmlContent | Out-File -FilePath "Reports\test-report.html" -Encoding UTF8
           Write-Host "Created report: Reports\test-report.html"
@@ -195,7 +233,7 @@ jobs:
           # Tạo file report JSON
           $reportData = @{
             status = $status
-            exitCode = $LASTEXITCODE
+            exitCode = $exitCode
             duration = [math]::Round($duration.TotalSeconds, 2)
             testSuite = $testSuitePath
             projectPath = $PWD
@@ -209,14 +247,14 @@ jobs:
           Write-Host "Created report: Reports\test-report.json"
           
           # Tạo file summary text
-          $summaryText = "KATALON TEST EXECUTION REPORT`n==============================`n`nStatus: $status`nExit Code: $LASTEXITCODE`nDuration: $durationStr seconds`n`nTest Suite: $testSuitePath`nProject Path: $PWD`nBrowser: Chrome (headless)`nExecution Profile: default`n`nStart Time: $startTimeStr`nEnd Time: $endTimeStr`n`nGenerated: $timestamp"
+          $summaryText = "KATALON TEST EXECUTION REPORT`n==============================`n`nStatus: $status`nExit Code: $exitCode`nDuration: $durationStr seconds`n`nTest Suite: $testSuitePath`nProject Path: $PWD`nBrowser: Chrome (headless)`nExecution Profile: default`n`nStart Time: $startTimeStr`nEnd Time: $endTimeStr`n`nGenerated: $timestamp"
           $summaryText | Out-File -FilePath "Reports\test-summary.txt" -Encoding UTF8
           Write-Host "Created report: Reports\test-summary.txt"
           
           Write-Host "Reports created successfully!"
         }
           
-    - name: Upload Test Reports
+    - name: Upload Test Reports and Logs
       if: always()
       uses: actions/upload-artifact@v4
       with:
@@ -227,6 +265,8 @@ jobs:
           **/*.html
           **/*.xml
           **/*.json
+          katalon-output.txt
+          katalon-error.txt
         if-no-files-found: warn
         retention-days: 30
 
